<resources>
    <string name="app_name">Lab3</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="banner_image">Banner image</string>
    <string name="virus">Virus</string>
    <string name="sintomas">Sintomas</string>
    <string name="indicaciones">Indicaciones</string>
    <string name="btn_de_estrella">Btn de Estrella</string>
    <string name="title_activity_virus">Virus</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_indicaciones">Indicaciones</string>
    <string name="home_button">Home Button</string>
    <string name="textview">TextView</string>
    <string name="agrega_un_comentario">Agrega un comentario</string>
</resources>
