<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable type="com.example.lab3.Usuario" name="Usuario"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="414dp"
            android:layout_height="173dp"
            android:contentDescription="@string/banner_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/btnSintomas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/banner" />

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/informacion_personal"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <EditText
            android:id="@+id/inputNombre"
            style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInfo"
            app:layout_constraintVertical_bias="0.051" />

        <EditText
            android:id="@+id/inputEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/edad"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNombre"
            app:layout_constraintVertical_bias="0.045" />

        <ImageView
            android:id="@+id/imgEstrella"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:contentDescription="@string/btn_de_estrella"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBanner"
            app:layout_constraintVertical_bias="0.221"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/btnVirus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="117dp"
            android:layout_height="57dp"
            android:text="@string/virus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/btnSintomas"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="117dp"
            android:layout_height="57dp"
            android:text="@string/sintomas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/btnIndicaciones"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="121dp"
            android:layout_height="56dp"
            android:text="@string/indicaciones"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <TextView
            android:id="@+id/txtMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnSintomas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.563" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>